--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.5.13",
     "vue-router": "4",
     "vue-toast-notification": "^3.1.3",
+    "vue3-google-map": "^0.21.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
